# ttt-rs

./: .dockerignore  .gitignore  Dockerfile.cuda  Dockerfile.rocm  LICENSE  QUICKSTART.md  README.md  experiments.toml  flake.nix
.github/workflows/: docker.yml
benches/: README.md  cubecl.toml  sweep.fish
nix/: bench-jax.nix  bench-kernels.nix  bench-pytorch.nix  benchmarks.nix  rust.nix
nix/patches/: jax-benchmark.py  jax-bfloat16-scan-carry.patch  jax-h32-config.patch  jax-utils-api.patch  kernels-all-sizes.patch  kernels-benchmark.py  kernels-triton-rocm.patch  pytorch-benchmark.py  pytorch-h32-config.patch
reference/: __init__.py  validate.py
results/: benches.csv
results/experiment-logs/adam-mixed/3sgd-3adam/: config.json
results/experiment-logs/adam-mixed/sgd-baseline/: config.json
results/experiment-logs/adam/highbeta2/: config.json
results/experiment-logs/adam/lr1e-3/: config.json
results/experiment-logs/adam/lr1e-4/: config.json
results/experiment-logs/adam/lr1e-5/: config.json
results/experiment-logs/adam/momentum/: config.json
results/experiment-logs/adam/nopos/: config.json
results/experiment-logs/adam/sgd-baseline/: config.json
results/experiment-logs/mixed/2lin-2mlp-2lin/: config.json
results/experiment-logs/mixed/3lin-3mlp/: config.json
results/experiment-logs/mixed/3mlp-3lin/: config.json
results/experiment-logs/mlp/depth-1h/: config.json
results/experiment-logs/mlp/depth-2h/: config.json
results/experiment-logs/mlp/depth-3h/: config.json
results/experiment-logs/mlp/depth-4h/: config.json
results/experiment-logs/mlp/depth-4h-exp-1x/: config.json
results/experiment-logs/mlp/exp-1x/: config.json
results/experiment-logs/mlp/exp-2x/: config.json
results/experiment-logs/mlp/exp-8x/: config.json
results/experiment-logs/mlp/robust-10ep/: config.json
results/experiment-logs/mlp/robust-nopos/: config.json
results/experiment-logs/mlp/robust-seed2/: config.json
results/experiment-logs/posenc/long-abs/: config.json
results/experiment-logs/posenc/long-none/: config.json
results/experiment-logs/posenc/long-rope/: config.json
results/experiment-logs/posenc/long-rope-global/: config.json
results/experiment-logs/posenc/short-abs/: config.json
results/experiment-logs/posenc/short-none/: config.json
results/experiment-logs/posenc/short-rope/: config.json
results/experiment-logs/posenc/short-rope-global/: config.json
rust/: .gitignore  Cargo.toml  cubecl.toml  run_experiments.sh  rust-analyzer.toml
rust/cli/: Cargo.toml
rust/cli/benches/: tile_configs.rs  ttt_benchmark.rs
rust/cli/src/: artifact_info.rs  bench.rs  lib.rs  main.rs  metrics_export.rs
rust/cli/tests/: validate_full.rs  validate_sweep.rs
rust/config/: Cargo.toml
rust/config/src/: lib.rs  train.rs  types.rs
rust/core/: Cargo.toml
rust/core/src/: config.rs  inner.rs  lib.rs  linear.rs  linear_adam.rs  mlp.rs  mlp2.rs  mlp3.rs  mlp4.rs  test_utils.rs  util.rs
rust/data/: Cargo.toml
rust/data/src/: batcher.rs  dataset.rs  lib.rs  pretokenized.rs  tokenizer.rs
rust/fused/: Cargo.toml
rust/fused/src/: lib.rs
rust/fused/src/linear_fused/: api.rs  launch.rs  mod.rs  tests.rs  wrapper.rs
rust/fused/src/linear_fused/backward/: kernel.rs  kernel_multi.rs  launch.rs  mod.rs  types.rs
rust/fused/src/linear_fused/forward/: kernel.rs  kernel_multi.rs  launch.rs  mod.rs
rust/fused/src/linear_fused_tile/: api.rs  helpers.rs  launch.rs  layer_norm.rs  mod.rs  tests.rs  wrapper.rs
rust/fused/src/linear_fused_tile/backward/: kernel.rs  launch.rs  mod.rs  stage.rs  types.rs
rust/fused/src/linear_fused_tile/forward/: kernel.rs  launch.rs  mod.rs  stage.rs  types.rs
rust/fused/src/linear_fused_tile/streaming/: mod.rs
rust/fused/src/linear_fused_tile/streaming/d2d/: host.rs  kernel.rs  mod.rs  tests.rs  wrapper.rs
rust/fused/src/linear_fused_tile/streaming/ptr/: host.rs  kernel.rs  mod.rs  tests.rs  wrapper.rs
rust/fused/src/ttt/: mod.rs  types.rs
rust/harness/: Cargo.toml  harness.example.toml  thesis_runs.toml  thesis_runs2.toml  thesis_runs3.toml
rust/harness/src/: config.rs  lib.rs  main.rs  runner.rs  runpod.rs  scheduler.rs  state.rs  vram.rs
rust/harness/tests/: resume.rs
rust/kernels/: Cargo.toml
rust/kernels/src/: bundle.rs  gelu_tanh.rs  kernel.rs  lib.rs  util.rs
rust/kernels/src/gelu/: api.rs  launch.rs  mod.rs  types.rs
rust/kernels/src/impls/: autodiff.rs  cube.rs  fusion.rs  mod.rs
rust/layer/: Cargo.toml
rust/layer/src/: any_inner.rs  block.rs  lib.rs  lm.rs  ttt.rs
rust/thundercube/: Cargo.toml
rust/thundercube/benches/: broadcast.rs  elementwise.rs  load_store.rs  mma.rs  reduce.rs
rust/thundercube/examples/: hello_world.rs  persistent_stream.rs  smem_liveness.rs
rust/thundercube/src/: binary_ops.rs  lib.rs  reduction_ops.rs  test_utils.rs  unary_ops.rs  util.rs
rust/thundercube/src/cube/: broadcast.rs  load.rs  mma.rs  mod.rs  reduce.rs  store.rs
rust/thundercube/src/cube/tests/: mma.rs  mod.rs  rw.rs
rust/thundercube/src/streaming/: mod.rs
rust/thundercube/src/tiles/: dim.rs  mma.rs  mod.rs  rt.rs  st.rs  transpose.rs
rust/training/: Cargo.toml
rust/training/src/: eval.rs  inference.rs  lib.rs  text_generation.rs  training.rs
scripts/: train_tokenizer.py
