[package]
name = "thundercube"
version = "0.1.0"
edition = "2024"

[dependencies]
cubecl = "0.9"
cubecl-hip-sys = { version = "7.0", optional = true }
bytemuck = "1"
half = "2"
paste = "1"
test-case = { version = "3", optional = true }
rand = { version = "0.10", optional = true }
pollster = "0.4"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "mma"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "load_store"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "elementwise"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "broadcast"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "reduce"
harness = false
required-features = ["test-utils"]

[[example]]
name = "persistent_stream"
required-features = ["test-utils", "rocm"]

[[example]]
name = "hello_world"
required-features = ["test-utils"]

[[example]]
name = "smem_liveness"
required-features = ["test-utils"]

[features]
default = ["test-utils"]
rocm = ["cubecl/hip", "dep:cubecl-hip-sys"]
cuda = ["cubecl/cuda"]
wgpu = ["cubecl/wgpu"]
cpu = ["cubecl/cpu"]
test-utils = ["dep:test-case", "dep:rand"]
